--- a/versuche/polarisation/bibliography/bibliography.bib
+++ b/versuche/polarisation/bibliography/bibliography.bib
@@ -7,4 +7,9 @@
     title = {Waveplate Calculator},
     howpublished = {\url{http://www.optocity.com/waveplate-calculator.htm}},
     note = {Abgerufen, 28-11-16 11:15}
+},
+@misc{ref:polarisation-video,
+    title = {Polarization of Light: circularly polarized, linearly polarized, unpolarized light},
+    howpublished = {\url{https://www.youtube.com/watch?v=8YkfEft4p-w}},
+    note = {Abgerufen, 22-11-16 13:30}
 }
