--- a/versuche/polarisation/polarisation.tex
+++ b/versuche/polarisation/polarisation.tex
@@ -12,7 +12,7 @@
     \include{sections/auswertung}
     \include{sections/fehlerrechnung}
     \include{sections/diskussion}
-    %\printbibliography
+    \printbibliography
 
     \appendix
     \includepdf[pages=-]{images/excel-messungen.pdf}
