Adding my name..

--- a/mlab_zusammenfassung2_alex_murray.tex
+++ b/mlab_zusammenfassung2_alex_murray.tex
@@ -5,6 +5,7 @@
 \begin{document}
 
 \section*{Zusammenfassung Synthese von kanonischen Reaktanzeintoren}
+\hfill \textit{Alex Murray}
 
 Sei eine  \"Ubertragungsfunktion  eines  LC-Filters bekannt, sollen die L- und
 C-Elemente numerisch berechnet werden. Diese ``synthetisierung'' erfolgt durch
